# toql_guide

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  book.toml
docs/: 1-introduction.html  2-concept.html  index.html  lib.rs  print.html  searchindex.js  searchindex.json
docs/3-api/: 1-introduction.html  2-load.html  3-query-type.html  4-insert.html  5-update.html  6-delete.html  7-writing-functions.html
docs/4-derive/: 1-introduction.html  10-keys.html  11-insert.html  12-update.html  13-selections.html  14-predicates.html  15-predicate-handlers.html  16-roles.html  17-reference.html  2-fields.html  3-optional-fields.html  4-sql-expressions.html  5-field-handlers.html  6-joins.html  7-join-handlers.html  8-partial-tables.html  9-merges.html
docs/5-query-language/: 1-introduction.html  2-select.html  3-order.html  4-filter.html  5-selections.html  6-predicates.html
docs/6-appendix/: 1-introduction.html  2-enums.html  2-mysql-enums.html  3-row-access-control.html  4-serde.html  5-debugging-toql.html
src/: 2-concept.md  SUMMARY.md  lib.rs
src/3-api/: 1-introduction.md  2-load.md  3-query-type.md  4-insert.md  5-update.md  6-delete.md  7-writing-functions.md
src/4-derive/: 1-introduction.md  10-keys.md  11-insert.md  12-update.md  13-selections.md  14-predicates.md  15-predicate-handlers.md  16-roles.md  17-reference.md  2-fields.md  3-optional-fields.md  4-sql-expressions.md  5-field-handlers.md  6-joins.md  7-join-handlers.md  8-partial-tables.md  9-merges.md
src/5-query-language/: 1-introduction.md  2-select.md  4-filter.md  5-selections.md  6-predicates.md
src/6-appendix/: 2-enums.md  2-mysql-enums.md  4-serde.md  (+2 more)
